faskes-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: faskes-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: faskes-api

  template:
    metadata:
      labels:
        app: faskes-api

    spec:
      containers:
        - name: faskes-api
          image: faskes-api-alice:1.2
          imagePullPolicy: Never

          ports:
            - containerPort: 8081

          volumeMounts:
            - name: faskes-env
              mountPath: /app/.env
              subPath: .env
              readOnly: true

      volumes:
        - name: faskes-env
          secret:
            secretName: faskes-env
