faskes-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: faskes-api

spec:
  selector:
    app: faskes-api

  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
