faskes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: faskes-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /faskes
            pathType: Prefix

            backend:
              service:
                name: faskes-api
                port:
                  number: 8081
